@@ -1,4 +1,6 @@
 *** Unreleased ***
+-Fixes
+Fix removal of reccuring absences
 
 *** Version 20.04.02       (2020-08-04)   ***
 -Fixes
